layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,8 @@ body {
 .box {
   border: 2px solid black;
   border-radius: 5px;
+  
+
 
 }
 #pizza-title {
@@ -42,8 +44,10 @@ body {
   height: 40px;
   padding: 5px;
   width: 200px;
-  justify-content:flex-start;
+  
 }
+
+  
 
 #box-style {
   width: 600px;
@@ -66,12 +70,13 @@ body {
   
   
 }
-.pizza.is-flex {
+.pizza.is-flex-direction-row {
   justify-content: space-between;
-  margin: 25px;
+  
+  margin: 0px;
   padding: 10px;
   border: 10px;
-  text-align: center;
+  text-align: left;
   flex-wrap: wrap;
-  
+  background-color: blue;
 }
